# ETSINF-FSOLab-21-22

./: CMakeLists.txt
practica1/: FSOatm  FSOatm2  FSOatm3  atm2.c  atm3.c  atmTest  atmTest.c  numbers  prac1Test.c
practica2/: FSOargumentos  FSOcirculo  FSOcirculo2  FSOmayusculas  FSOoptions  FSOsumafilas  FSOsumafilas2  FSOvariablesVarias  argumentos.c  circulo.c  circulo2.c  mayusculas.c  options.c  sumafilas.c  sumafilas2.c  variablesVarias.c
practica3/: arguments.sh  awkTest.sh  borrar_fichero.sh  content.sh  example.txt  inf_process.sh  my_process.sh  notes.txt  num_proc.sh  pidInfo.txt  processTest.sh  shellScriptTest2.sh  shellScriptsTest.sh  system_process.sh
practica4/: FSOChangeMemory  addRows  addRowsPro  addrowspro.c  adoptedProcess  adopted_process.c  change_memory1.c  execTest  execTest.c  finalState  final_state.c  myChild  my_child.c  parentWait  parent_wait.c  rangeProcess  range_process.c
practica5/: @notasPractica5.txt  CondCarr.c  condCarr1  condCarrTimes.txt  mutexCondCarr  mutexCondCarr.c  semCondCarr  semCondCarr.c  tasCondCarr  tasCondCarr.c  threadExample  threadExample.c
practica6/: @notasPractica6.txt  a_pipe.c  catRedir  catRedir.c  catRedirPipe.c  descriptor  descriptor.c  fileDescriptor  fileDescriptor.c  lsRedir  lsRedir.c  ls_salida.txt  pipe  redirOutput  redirOutput.c  shareFile  shareFile.c
practica7/: @notasPractica7.txt
practica8/: @notasPractica8  libCoS  libCos  map1  map2  map3  map3.c
